# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  SEQUENTIAL_TOOL_CALLING_IMPLEMENTATION.md  frontend-changes.md  pyproject.toml
backend/: TEST_REPORT.md  TEST_RESULTS_AND_FIXES.md  ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
backend/tests/: API_TEST_SUMMARY.md  README.md  conftest.py  test_ai_generator.py  test_api.py  test_error_handling.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
chroma_db/: chroma.sqlite3
docs/: query_flow_diagram.md
frontend/: index.html  script.js  style.css
scripts/: README.md  format.sh  lint.sh  quality.sh  test.sh
